--- a/spam_detection.ipynb
+++ b/spam_detection.ipynb
@@ -1700,16 +1700,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!mkdir -p saved_model\n",
-    "rnn.save('saved_model/spam_model')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 52,
    "metadata": {
     "colab": {
@@ -1820,46 +1810,25 @@
     }
    ],
    "source": [
-    "rnn.evaluate(X_test, y_test, verbose=2)"
+    "rnn.evaluate(X_test, y_test, verbose=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 2374,
-     "status": "ok",
-     "timestamp": 1644935043538,
-     "user": {
-      "displayName": "Petra Bajac",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GisMWQ6Nwt62NYivub0ffOkvc3Im46ek_BgBPz3=s64",
-      "userId": "17459354793322234878"
-     },
-     "user_tz": -60
-    },
-    "id": "SR44uhJXAiXu",
-    "outputId": "cbd9e712-f050-4919-e438-14e9007ec35c"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.8745519713261649\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "from sklearn.metrics import accuracy_score\n",
-    "\n",
-    "y_pred = rnn.predict(X_test)\n",
-    "classes = np.argmax(y_pred, axis=1)\n",
-    "\n",
-    "print(accuracy_score(y_test, classes))"
+    "rnn.save('saved_model/spam_model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#rnn = tf.keras.models.load_model('saved_model/spam_model')"
    ]
   },
   {
