--- a/spam_detection.ipynb
+++ b/spam_detection.ipynb
@@ -1479,7 +1479,7 @@
    "outputs": [],
    "source": [
     "from keras.models import Sequential\n",
-    "from keras.layers import Input, Embedding, LSTM, GlobalMaxPool1D, Dense, Dropout, BatchNormalization"
+    "from keras.layers import Input, Embedding, LSTM, GlobalMaxPool1D, Dense"
    ]
   },
   {
